[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-colab"
version = "0.1.0"
description = "Interactive napari viewer inside Google Colab via noVNC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Alexandre Bruno Cardoso" }
]
keywords = ["napari", "colab", "microscopy", "bioimage", "vnc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "napari[all]>=0.4.18",
    "opencv-python-headless",
    "tifffile>=2023.2.3",
    "qtpy>=2.3.0",
    "websockify>=0.11.0",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/brunicardoso/napari-colab"
Issues   = "https://github.com/brunicardoso/napari-colab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["napari_colab*"]
